2008-09-16  Abel Cheung  <abelcheung@gmail.com>

	* class.pmw.inc.php: Fix ImageMagick and PMW command invocation.
	* wp-scorerender.php, class.scorerender.inc.php: Allows crude debugging.

2008-09-16  Abel Cheung  <abelcheung@gmail.com>

	* class.pmw.inc.php: New file for Philip's Music Writer support.
	* wp-scorerender.php: Add changes necessary for PMW support.

2008-09-16  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php:
	- (create_temp_dir) Fix usage and parent directory name.

	* class.{guido,scorerender}.inc.php:
	- Hide unimportant errors.

2008-09-16  Abel Cheung  <abelcheung@gmail.com>

	* class.{abc,mup,lilypond,scorerender}.inc.php:
	- Quote command line arguments properly (yes, PHP Win32 does not support
	  quoting commands at least since 4.3.x)

	* wp-scorerender.php: All sort of Win32 fixes.
	- (get_path_presentation) New func. Convert slash <-> backslash in paths.
	- (transform_paths) New func. Convert path slashes in settings.
	- (is_absolute_path) New func. Self-explanatory.
	- (get_upload_dir) Rewrite to allow transforming slashes <--> backslashes.
	- (scorerender_get_options, scorerender_update_options) Convert to backslashes
	  for displaying paths under Windows, but store Unix style slashes in DB.

	* class.scorerender.php:
	- (create_temp_dir) New func. Like tempnam, but for directory. Not good to
	  litter all temp files under $TMP.
	- (_exec) Rewritten to use popen, so need not assign another variable for output.
	- (render) Adjusted to use temp dir instead of temp file.

2008-09-15  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php:
	- Cosmetic changes: indentation
	- (execute) Rename to conversion_step1()
	- (convertimg) Rename to conversion_step2()

2008-09-15  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- Eliminate incorrect use of attribute_escape().
	- (is_windows) New func. Convenient func for determining Windows platform.

2008-09-05  Abel Cheung  <abelcheung@gmail.com>
